--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Настройки соединения с базой данных
-spring.datasource.url= jdbc:postgresql://localhost:5433/postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=21101997
+spring.datasource.password=admin
 
 #настройки Hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
