--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '1.5.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.5.2.RELEASE'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.0.0'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 }
