--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,10 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.0.0'
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+
+    testCompile("org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE")
+}
+
+test {
+    useTestNG()
 }
