--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #Настройки соединения с базой данных
-spring.datasource.url= jdbc:postgresql://localhost:5433/postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=21101997
+spring.datasource.password=admin
 
 #настройки Hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=trace 
+spring.jpa.properties.hibernate.type=trace
 
 # JMX нам не нужен, а его отключение позволит ускорить запуск
 spring.jmx.enabled=false
